Bug 1645817 - Use overlay scrollbars win browser resolution test. r=kats

Using overlay scrollbars will avoid the need to account for the trimmed
space that is introduced after an overflowing zoom caused by scrollbars.

Differential Revision: https://phabricator.services.mozilla.com/D80102